--- a/styles.css
+++ b/styles.css
@@ -45,6 +45,28 @@ body {
   .products .btn-primary:hover {
     background-color: #0056b3;
   }
+
+  /* Animatiom text section */
+
+  .pop-text {
+    font-size: 1rem;
+    font-weight: bold;
+    color: #ff6347;
+    animation: pop 1.5s infinite ease-in-out;
+  }
+  
+  @keyframes pop {
+    0% {
+      transform: scale(1);
+    }
+    50% {
+      transform: scale(1.5);
+    }
+    100% {
+      transform: scale(1);
+    }
+  }
+  
   
   /* Footer */
   .footer {
