--- a/styles.css
+++ b/styles.css
@@ -7,6 +7,7 @@ body {
 .headertext{
   background: pink;
   padding-top: 30px;
+  margin-bottom: 50px;
   text-align: center;
 }
 
@@ -155,13 +156,13 @@ body {
 }
 
 
-
-
-
-
-
-
-
+.product-cards {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  gap: 20px;
+  margin-top: 20px;
+}
 
 
 
