--- a/products.css
+++ b/products.css
@@ -33,6 +33,46 @@
     transition: 0.3s;
   }
 
+
+    /* Custom sticky navbar */
+    .sticky-navbar {
+      position: sticky;
+      top: 0;
+      z-index: 1030;
+      box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+    }
+
+
+    .navbar-scrolled {
+      background-color: lightblue !important;
+      transition: background-color 0.3s;
+    }
+
+
+    /* Scroll to Top Button Styling */
+#scrollToTopBtn {
+  position: fixed;
+  bottom: 50px;
+  right: 20px;
+  display: none;
+  background-color: #0d6efd;
+  color: white;
+  border: none;
+  border-radius: 50%;
+  width: 50px;
+  height: 50px;
+  cursor: pointer;
+  font-size: 24px;
+  align-items: center;
+  justify-content: center;
+  display: flex;
+  transition: opacity 0.3s;
+  z-index: 1000;
+}
+#scrollToTopBtn:hover {
+  background-color: #0056b3;
+}
+
   span{
     color: #ff6347;
   }
