--- a/products.css
+++ b/products.css
@@ -49,29 +49,41 @@
     }
 
 
-    /* Scroll to Top Button Styling */
-#scrollToTopBtn {
-  position: fixed;
-  bottom: 50px;
-  right: 20px;
-  display: none;
-  background-color: #0d6efd;
-  color: white;
-  border: none;
-  border-radius: 50%;
-  width: 50px;
-  height: 50px;
-  cursor: pointer;
-  font-size: 24px;
-  align-items: center;
-  justify-content: center;
-  display: flex;
-  transition: opacity 0.3s;
-  z-index: 1000;
-}
-#scrollToTopBtn:hover {
-  background-color: #0056b3;
-}
+    /* scroll to top arrow fucntion */
+    #scrollTopBtn {
+      position: fixed;
+      bottom: 85px;
+      right: 20px;
+      background-color: blue;
+      color: white;
+      border: none;
+      border-radius: 50%;
+      width: 50px;
+      height: 50px;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      font-size: 24px;
+      cursor: pointer;
+      opacity: 1;
+      visibility: visible;
+      transition: font-weight 0.3s ease-in-out, opacity 0.3s ease-in-out;
+    }
+    
+    #scrollTopBtn:hover {
+      background-color: darkblue;
+    }
+    
+    @media (max-width: 600px) {
+      #scrollTopBtn {
+        width: 40px;
+        height: 40px;
+        font-size: 20px;
+        bottom: 120px;
+      }
+    }
+    
+    
 
   span{
     color: #ff6347;
