--- a/products_review.css
+++ b/products_review.css
@@ -70,6 +70,45 @@ span{
     border: 1px solid #ddd;
 }
 
+
+
+/* scroll to top arrow fucntion */
+#scrollTopBtn {
+    position: fixed;
+    bottom: 85px;
+    right: 20px;
+    background-color: blue;
+    color: white;
+    border: none;
+    border-radius: 50%;
+    width: 50px;
+    height: 50px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-size: 24px;
+    cursor: pointer;
+    opacity: 1;
+    visibility: visible;
+    transition: font-weight 0.3s ease-in-out, opacity 0.3s ease-in-out;
+  }
+  
+  #scrollTopBtn:hover {
+    background-color: darkblue;
+  }
+  
+  @media (max-width: 600px) {
+    #scrollTopBtn {
+      width: 40px;
+      height: 40px;
+      font-size: 20px;
+      bottom: 120px;
+    }
+  }
+  
+  
+  
+
 @media (min-width: 768px) {
     .product-section {
         display: flex;
