--- a/products.css
+++ b/products.css
@@ -74,25 +74,24 @@
       background-color: darkblue;
     }
 
+    /* social icons section */
 
-    /* Social icons container */
-.social-icons {
-  display: inline-flex;
-  gap: 15px;
-}
+    .social-icons {
+      display: flex;
+      
+      justify-content: center; 
+      align-items: center; 
+      gap: 15px; 
+      margin-top: 10px; 
+  }
+  
+  .social-icons a i {
+      font-size: 24px; 
+      color: #fff; 
+      text-decoration: none;
+  }
 
-/* Individual social icon */
-.social-icon {
-  color: #fff;
-  font-size: 24px;
-  text-decoration: none;
-  transition: color 0.3s ease;
-}
 
-/* Hover effect */
-.social-icon:hover {
-  color: #007bff;
-}
     
     @media (max-width: 600px) {
       #scrollTopBtn {
