--- a/products_review.css
+++ b/products_review.css
@@ -99,6 +99,25 @@ span{
 
 
   /* footer section */
+  .social-icons {
+    display: flex;
+    
+    justify-content: center; 
+    align-items: center; 
+    gap: 15px; 
+    margin-top: 10px; 
+}
+
+.social-icons a i {
+    font-size: 24px; 
+    color: #fff; 
+    text-decoration: none;
+}
+
+.col-md-6 {
+    text-align: center; 
+}
+
 
   .policy-section {
     padding: 40px 15px;
@@ -120,10 +139,7 @@ span{
 
 
 /* Social icons container */
-.social-icons {
-    display: inline-flex;
-    gap: 15px;
-  }
+
   
   /* Individual social icon */
   .social-icon {
