--- a/styles.css
+++ b/styles.css
@@ -256,10 +256,6 @@ main {
   font-size: 30px;
 }
 
-.social-icons:hover{
- 
-}
-
 
 
 
@@ -278,11 +274,14 @@ main {
     width: 250px;
     height: 500px;
   }
+
+  
 }
 
 @media (max-width: 480px) {
   .promo-text h1 {
     font-size: 1.5rem;
+   
   }
 
   .promo-text p {
@@ -293,4 +292,31 @@ main {
     width: 200px;
     height: 400px;
   }
+
+  .card-img-container img {
+    width: 300px;
+   height: 250px;
+   object-position: center;
+   
+  
+   
+}
+
+  
+
+  
+
+
+
+
+  .card-title{
+    font-size: 19px;
+  }
+
+  .card-text{
+    font-size: 12px;
+    line-height: 15px;
+  }
+   
+ 
 }
