--- a/styles.css
+++ b/styles.css
@@ -294,9 +294,10 @@ main {
   }
 
   .card-img-container img {
-    width: 300px;
+    width: 100%;
    height: 250px;
-   object-position: center;
+  
+  
    
   
    
