--- a/about.css
+++ b/about.css
@@ -1,81 +1,87 @@
 /* styles.css */
 
 body {
-    font-family: Arial, sans-serif;
-    line-height: 1.6;
-  }
+  font-family: Arial, sans-serif;
+  line-height: 1.6;
+  display: flex;
+  flex-direction: column;
+  min-height: 100vh;
+  margin: 0;
+}
 
-  /* Custom sticky navbar */
-  .sticky-navbar {
-    position: sticky;
-    top: 0;
-    z-index: 1030;
-    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
-  }
+/* Custom sticky navbar */
+.sticky-navbar {
+  position: sticky;
+  top: 0;
+  z-index: 1030;
+  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+}
 
-/* scroll navbar */
-  .navbar-scrolled {
-    background-color: lightblue !important;
-    transition: background-color 0.3s;
-  }
+/* Scroll navbar */
+.navbar-scrolled {
+  background-color: lightblue !important;
+  transition: background-color 0.3s;
+}
 
-  span{
-    color: #ff6347;
-  }
-  
-  h2 {
-    font-weight: 700;
-  }
-  
-  .about-section {
-    background-color: #f9f9f9;
-  }
-  
-  .about-section p, .about-section h4 {
-    color: #333;
-  }
-  
-  .about-section ul {
-    list-style-type: square;
-    padding-left: 20px;
-  }
+span {
+  color: #ff6347;
+}
 
-  
-    /* scroll to top arrow fucntion */
-    #scrollTopBtn {
-        position: fixed;
-        bottom: 85px;
-        right: 20px;
-        background-color: blue;
-        color: white;
-        border: none;
-        border-radius: 50%;
-        width: 50px;
-        height: 50px;
-        display: flex;
-        align-items: center;
-        justify-content: center;
-        font-size: 24px;
-        cursor: pointer;
-        opacity: 1;
-        visibility: visible;
-        transition: font-weight 0.3s ease-in-out, opacity 0.3s ease-in-out;
-      }
-      
-      #scrollTopBtn:hover {
-        background-color: darkblue;
-      }
+h2 {
+  font-weight: 700;
+}
 
-  /* Footer styling */
-  .footer{
-    background-color: lightblue;
-  }
+.about-section {
+  background-color: #f9f9f9;
+  flex: 1;
+}
 
-  .social-icons a i{
-    font-size: 25px;
-  }
+.about-section p, .about-section h4 {
+  color: #333;
+}
 
-  .footer p{
-    color: #fff;
-  }
-  
+.about-section ul {
+  list-style-type: square;
+  padding-left: 20px;
+}
+
+/* Scroll to top arrow function */
+#scrollTopBtn {
+  position: fixed;
+  bottom: 85px;
+  right: 20px;
+  background-color: blue;
+  color: white;
+  border: none;
+  border-radius: 50%;
+  width: 50px;
+  height: 50px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-size: 24px;
+  cursor: pointer;
+  opacity: 1;
+  visibility: visible;
+  transition: font-weight 0.3s ease-in-out, opacity 0.3s ease-in-out;
+}
+
+#scrollTopBtn:hover {
+  background-color: darkblue;
+}
+
+/* Footer styling */
+.footer {
+  background-color: lightblue;
+  text-align: center;
+  padding: 10px 0;
+  margin-top: auto;
+}
+
+.social-icons a i {
+  font-size: 25px;
+}
+
+.footer p {
+  color: #fff;
+}
